--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Nunito:wght@400;600;700&family=Rubik:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Carter+One&family=Nunito:wght@400;600;700&family=Rubik:wght@400;500;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html,body{
+html,
+body {
   width: 100%;
   height: 100%;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
+}
+
+.scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+.scroll::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+.scroll::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.scroll::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
+
+
+.scroll-hide::-webkit-scrollbar {
+  display: none;
 }
