--- a/src/components/clock.css
+++ b/src/components/clock.css
@@ -2,7 +2,7 @@
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    position: absolute;
+    /* position: absolute; */
     top: 50%;
     left: 50%;
     transform: translate(0%, 0%);
@@ -30,7 +30,7 @@
     position: absolute;
     width: 6px;
     height: 60px;
-    background: #222;
+    background: #0b0b0b;
     top: 30%;
     left: 49%;
     transform-origin: bottom;
@@ -40,7 +40,7 @@
     position: absolute;
     width: 4px;
     height: 80px;
-    background: #444;
+    background: #403f3f;
     top: 22.5%;
     left: 49%;
     transform-origin: bottom;
@@ -103,7 +103,7 @@
     top: 67%;
 }
 .nine{
-    left: 30px;
+    left: 10px;
     top: 46%;
 }
 .ten{
