--- a/src/components/clock.css
+++ b/src/components/clock.css
@@ -2,9 +2,9 @@
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    /* position: absolute; */
-    top: 50%;
-    left: 50%;
+    /* position: absolute;
+    top: 60%;
+    left: 2%; */
     transform: translate(0%, 0%);
     box-shadow: 0 2px 30px rgba(0, 0, 0, 0.5);
     font-size: 24px;
